[gd_scene load_steps=4 format=3 uid="uid://5x4a7xdxs5hy"]

[ext_resource type="Script" uid="uid://cl7wm4pxt3m08" path="res://addons/UniParticles3D/uniparticle_preview.gd" id="1_kj4u8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tphcv"]
bg_color = Color(0.164706, 0.164706, 0.164706, 0.603922)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.14902, 0.14902, 0.14902, 0.309804)

[sub_resource type="LabelSettings" id="LabelSettings_6v1jf"]
font_size = 18
font_color = Color(0.733005, 0.733005, 0.733005, 1)

[node name="BurstPreview" type="Control"]
visible = false
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(280, 240)
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -120.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource("1_kj4u8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -149.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Panel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tphcv")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Particles Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Particles"
label_settings = SubResource("LabelSettings_6v1jf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(78, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Play"

[node name="RestartButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(78, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Restart"

[node name="StopButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(78, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Stop"

[node name="SpeedContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/SpeedContainer"]
layout_mode = 2
text = "Speed:"

[node name="SpeedSpinBox" type="SpinBox" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/SpeedContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 5.0
step = 0.01
value = 1.0

[node name="Timecontainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TimeLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Timecontainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Time:"

[node name="ActualTimeLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Timecontainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0.00"
horizontal_alignment = 2

[node name="ParticlesContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ParticlesLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/ParticlesContainer"]
layout_mode = 2
text = "Particles:"

[node name="ActualParticlesLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/ParticlesContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2
